[package]
name = "bestlight-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-grants = "3.0.2"
argon2 = "0.5.2"
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
jsonwebtoken = "9.1.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.8.0-alpha.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"], git = "https://github.com/KirDontsov/sqlx.git" }
thirtyfour = "0.32.0"
tokio = "1.33.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
openai-api-rs = "4.0.1"
hyper = { version = "0.14.26", features = ["full"] }
hyper-tls = { version = "0.5.0" }
spinners = "4.1.0"
thiserror = "1.0.56"
log = "0.4.20"
reqwest = "0.12.2"
photon-rs = "0.3.2"
glob = "0.3.1"
translit = "0.5.0"
sitemap = "0.4.1"

[dev-dependencies]
time = "0.3.36"
